test/sema/typeck/trait/default-method-template-assoc-type-missing-bound.dora
trait Source {
    type Item;

    fn item(): Self::Item;

    fn message(): String {
        "item=${self.item()}"
    }
}
